--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Discover and compare clinical opportunities from hospitals, clinics, hospice care centers, and EMT programs. Crowdsourced reviews and ratings from real pre-med students.">
     <meta name="author" content="ClinicalHours" />
 
-    <!-- Premium Display Font -->
+    <!-- Primary Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
