Optimize loading performance with code splitting and build optimizations
- Implement lazy loading for all route components using React.lazy()
- Add Suspense with loading fallback for better UX during code splitting
- Configure Vite build optimizations with manual chunk splitting
- Optimize video loading: only preload first video, defer others
- Delay auto-import hook execution to improve initial page load
- Split vendor chunks (React, UI libraries, Mapbox) for better caching
- Reduce initial bundle size significantly

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="description" content="Discover and compare clinical opportunities from hospitals, clinics, hospice care centers, and EMT programs. Crowdsourced reviews and ratings from real pre-med students.">
     <meta name="author" content="ClinicalHours" />
 
-    <!-- Primary Fonts -->
+    <!-- Primary Fonts - Preconnect for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
     
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
